gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-cfg_overflow_checks_dg.rs
#![crate_type = "lib"]

#[cfg(overflow_checks)] // { dg-error ".E0658." "" { target *-*-* } }
pub fn cast(v: i64)->u32{
    todo!()
}

